css/general.css
header {
  border-style: solid;
  border-bottom-width: 10px;
  border-color: black;
}
.bg-paper {
	background-image: url("../../img/map-image.png");
}

#mainNav {
  background-color: #222222;
  border-color: transparent;
}
#mainNav .navbar-toggle {
	background-color: #1c4563; /*#fed136;*/
	border-color: #1c4563;
  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  color: white;
  font-size: 12px;
}
#mainNav .navbar-toggle:hover,
#mainNav .navbar-toggle:focus {
	background-color: #1c4563; /*#fed136;*/
}
#mainNav .nav li a {
  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  font-weight: 400;
  letter-spacing: 1px;
  color: white;
}
#mainNav .nav li a:hover,
#mainNav .nav li a:focus {
	background-color: #1c4563; /*#fed136;*/
	color: #cdcbc8;
  outline: none;
}
#mainNav .navbar-nav > .active > a {
  border-radius: 0;
  color: white;
  background-color: #1c4563; /*#fed136;*/
}
#mainNav .navbar-nav > .active > a:hover,
#mainNav .navbar-nav > .active > a:focus {
	color: white;
	background-color: #27628b; /*#fec503;*/
}
@media (min-width: 768px) {
  #mainNav {
    padding: 10px 0;
    -webkit-transition: padding 0.3s;
    -moz-transition: padding 0.3s;
    transition: padding 0.3s;
    border: none;
  }
  #mainNav .navbar-nav > .active > a {
    border-radius: 3px;
  }
}

.text-indented {
	padding-left: 20px;
}
@media (min-width: 768px) {
	.text-indented {
		padding-left: 50px;
	}
}

section {
	padding: 100px 0 50px 0;
}
section h3.section-subheading-short {
	margin-bottom: -5px;
}
section h6.section-subheading {
	font-style: italic;
	text-transform: none;
	font-size: 12px;
	font-weight: 200;
	margin-bottom: 50px;
}
#portfolio {
	margin-top: -10px;
}
#articles {
	margin-top: 50px;
}

.list-hidee {
	text-align: center;
	display: none;
}
@media screen and (min-width: 48em){
	.list-hidee {
		text-align: right;
		display: block;
	}
	.list-hidee.list-left {
		text-align: left;
	}
}

.list-spacer {
	margin-bottom: 20px;
}
@media (min-width: 768px) {
.list-spacer {
	margin-bottom: 50px;
}
}

.timeline h3 {
	text-align: center;
}
.timeline-inverted h3 {
	text-align: center;
}
.timeline > li {
	margin-bottom: -100px;
}

.list-subheading {
	font-size: 16px;
	font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-transform: none;
	font-style: italic;
	font-weight: 400;
	margin-top: 25px;
}
.list-first {
	margin-top: 15px;
}
.list-subheading ~ a {
	font-style: italic;
	font-weight: 300;
	font-size: 14px;
}
.list-subheading ~ a:hover,
.list-subheading ~ a:focus,
.list-subheading ~ a:active,
.list-subheading ~ a.active {
	color: #c1a157;
}

.article-example {
	padding: 10px 20px 10px 20px;
	background-color: #dddddd;
}
.article-example h4.section-subheading {
	text-transform: uppercase;
	font-weight: 600;
}
.section-heading {
	padding-top: 50px;
	padding-bottom: 25px;
}
.section-line {
	border-top-style: solid;
	border-top-width: .1px;
	border-top-color: #cccccc;
}

.text-article {
	font-size: 16px;
	font-weight: 500;
	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
	margin-bottom: 25px;
}
.text-article li h4 {
	text-transform: none;
	font-weight: 500;
}
.text-no-bottom {
	margin-bottom: 10px;
}
.text-caption {
	font-size: 14px;
	color: #777777;
	text-align: center;
}
keyword {
	/*font-style: italic;*/
	font-weight: 600;
}
aside,
ul li aside,
ul.text-article li aside{
	/*position: absolute;*/
	margin: 0 auto;
	background: /*#1c4563*/#fdf6e3;
	color: #657b83;
	padding-left: 10px;
	padding-right: 5px;
	padding-bottom: 5px;
	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 14px;
	border-color: #eee8d5;
	border-style: solid;
	border-width: 1px;
	border-radius: 1px;
}
aside h4,
aside h5,
.text-article aside h4,
.text-article aside h5 {
	font-weight: 600;
	text-transform: none;
}

asideLoc::after {
	content: "†";
	color: #444444;
	vertical-align: super;
	font-size: 13px;
}

.img-main {
	max-width: 75%;
	display: block;
	margin: 0 auto;
}

pre code {
	color: #777777; /* Line number colors */
	text-align: left;
}

